--- a/Onlinestore/Onlinestore/Views/Products/Create.cshtml
+++ b/Onlinestore/Onlinestore/Views/Products/Create.cshtml
@@ -25,6 +25,11 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
+            <div>
+                <label asp-for="ForSale" class="control-label"></label>
+                <input asp-for="ForSale" class="form-control" />
+                <span asp-validation-for="ForSale" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
