--- a/Onlinestore/Onlinestore/Views/Products/Details.cshtml
+++ b/Onlinestore/Onlinestore/Views/Products/Details.cshtml
@@ -22,6 +22,12 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
+        <dd>
+            @Html.DisplayNameFor(model => model.Category)
+        </dd>
+        <dd>
+            @Html.DisplayFor(model => model.Category)
+        </dd>
     </dl>
 </div>
 <div>
