--- a/Onlinestore/Onlinestore/Views/Shared/_Layout.cshtml
+++ b/Onlinestore/Onlinestore/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                     <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
                     <li><a asp-area="" asp-controller="Testies" asp-action="Create">Test</a></li>
                     <li><a asp-area="" asp-controller="Categories" asp-action="Create">Categories</a></li>
+                    <li><a asp-area="" asp-controller="Categories" asp-action="Create">Categories</a></li>
                     @*<li><a asp-area="" asp-controller="Home" asp-action="About">Om oss</a></li>
         <li><a asp-area="" asp-controller="Home" asp-action="Contact">Kontakt</a></li>*@
                 </ul>
