--- a/Onlinestore/Onlinestore/Views/Faq/Index.cshtml
+++ b/Onlinestore/Onlinestore/Views/Faq/Index.cshtml
@@ -1,7 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model LabViewModel
 
 <h1>FAQ-OFF</h1>
+
+@Model.CuttingsExample
