--- a/Onlinestore/Onlinestore/Views/Shared/_Layout.cshtml
+++ b/Onlinestore/Onlinestore/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     <li><a asp-area="" asp-controller="Faq" asp-action="TopFive">Top 5</a></li>
                     <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
                     <li><a asp-area="" asp-controller="Weather" asp-action="Index">Weather</a></li>
+                    <li><a asp-area="" asp-controller="Trello" asp-action="Index">Trello</a></li>
                     <li><a asp-area="" asp-controller="Categories" asp-action="Create">Categories</a></li>
                     @*<li><a asp-area="" asp-controller="Home" asp-action="About">Om oss</a></li>
         <li><a asp-area="" asp-controller="Home" asp-action="Contact">Kontakt</a></li>*@
