--- a/Onlinestore/Onlinestore/Views/Weather/Index.cshtml
+++ b/Onlinestore/Onlinestore/Views/Weather/Index.cshtml
@@ -22,6 +22,10 @@
             <div class="form-group">
                 <input type="submit" value="Ok" class="btn btn-default" />
             </div>
+            @if (Model.ErrorMessage != null)
+            {
+            <div class="alert alert-danger">Fel: @Model.ErrorMessage</div> 
+            }
         </form>
     </div>
 
